--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "rxjs": "~7.5.0",
     "sass": "^1.66.1",
     "sweetalert2": "^11.7.27",
+    "swiper": "^8.4.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
